Bug 490853 - Replace new Integer() with Integer.valueOf() in org.eclipse.swt.examples
I used the fix copyright tool to update the copyright header.

Change-Id: I2afcc354a896264fc2c34e18c95d6f74e3e7be9a
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>